--- a/index.html
+++ b/index.html
@@ -6,113 +6,195 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>André Souza</title>
+    <link rel="stylesheet" href="./src/css/styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Noto+Sans+Mono&family=Open+Sans&family=Poppins&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-    <table>
-        <tr>
-            <td>
-                <img src="andre.png" alt="Foto de André">
-            </td>
-            <td>
-                <h1>
-                    André Souza 💚
-                </h1>
-                <p><em>Software Engineer</em></p>
-            </td>
-        </tr>
-    </table>
 
-
-
-    <hr>
-
-    <h3>Education</h3>
-    <ul>
-        <li>MSc in Aplied Informatics
-            <ul>
-                <li> UFRPE</li>
-            </ul>
-        </li>
-        <li>Bacharelor in Information Systems <ul>
-                <li>Uninassau</li>
-            </ul>
-        </li>
-        <li>Computing Graphical
-            <ul>
-                <li>
-                    IFPE
-                </li>
-            </ul>
-        </li>
-    </ul>
-
-    <hr>
-
-    <h3>
-        Work Experience
-    </h3>
-    <table>
-        <tr>
-            <th>Dates</th>
-            <th>Work</th>
-        </tr>
-        <tr>
-            <td>
-                05/2022 - Current
-            </td>
-            <td>
-                Software Engineer at Avanade
-            </td>
-        </tr>
-        <tr>
-            <td>
-                04/2022 - 05/2022
-            </td>
-            <td>
+    <div class="hero">
+        <div class="pic-container">
+            <img class="picture" src="./src/assets/andre.png" alt="Foto de André">
+        </div>
+        <div class="title">
+            <h1>
+                André Souza
+            </h1>
+            <p>
                 Software Engineer
-            </td>
-        </tr>
-    </table>
+            </p>
+            <p>28 years old from Pernambuco - Brazil</p>
+        </div>
+    </div>
 
+    <div class="contact">
+        <a class="contact-link" href="https://www.linkedin.com/in/andr%C3%A9-souza-3104a6195/"><svg
+                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-linkedin"
+                viewBox="0 0 16 16">
+                <path
+                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+            </svg></a>
+        <a class="contact-link" href="https://github.com/Aan3dree"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                height="24" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+            </svg></a>
+        <a class="contact-link" href="mailto:an3dree@gmail.com">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-envelope"
+                viewBox="0 0 16 16">
+                <path
+                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+            </svg>
+        </a>
+
+    </div>
     <hr>
-
-    <h3>Skills</h3>
-
-    <table border="1">
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>★★★★</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>★★★★</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>★★★★</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>★★★★</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+    <div class="container">
+        <h2>About</h2>
+        <p>MSc student in Computer Science, bachelor in Information Systems, Computer Graphics thechnician. Experience
+            in Full Stack Development with modern technologies like NodeJS, React, Angular and .NET. Currently working
+            with Microsoft365 products in particular, SharePoint.</p>
+    </div>
 
 
     <hr>
 
-    <a href="hobbies.html">Hobbies</a>
-    <a href="contact.html">Contact Me</a>
+    <div class="container">
+        <h2>Education</h2>
+        <div class="education-item">
+            <h5>PPGIA - UFRPE</h5>
+            <p>Master's degree in Aplied Informatics, Computer Sciences · <span>Mar 2022 - Current</span></p>
+        </div>
+        <div class="education-item">
+            <h5>UNINASSAU</h5>
+            <p>Bachelor's degree, Information Systems · <span>Feb 2018 - Jan 2022</span></p>
+        </div>
+        <div class="education-item">
+            <h5>IFPE</h5>
+            <p>Technical Education, Computer Graphics · <span>Aug 2018 - Dec 2020</span></p>
+        </div>
+
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <h2>Work Experience</h2>
+        <div class="work-item">
+            <h5>Software Engineer</h5>
+            <p>Avanade · <span>Jun 2022 - Current</span></p>
+        </div>
+        <div class="work-item">
+            <h5>Associate Software Engineer</h5>
+            <p>Avanade · <span>Apr 2021 - Jun 2022</span></p>
+        </div>
+        <div class="work-item">
+            <h5>Full Stack Developer - Internship</h5>
+            <p>Epione · <span>Dec 2020 - Apr 2021</span></p>
+        </div>
+        <div class="work-item">
+            <h5>2D Animator - Internship</h5>
+            <p>Fundeca · <span>Sep 2020 - Dec 2020</span></p>
+        </div>
+        <div class="work-item">
+            <h5>Extension Scholarship</h5>
+            <p>IFPE Olinda · <span>Feb 2019 - Dec 2020</span></p>
+        </div>
+        <div class="work-item">
+            <h5>Designer - Internship</h5>
+            <p>Tecmidia · <span>Jan 2020 - Aug 2020</span></p>
+        </div>
+        <div class="work-item">
+            <h5>Telemarketing Attendant</h5>
+            <p>Grupo Contax · <span>Oct 2014 - Jan 2015</span></p>
+        </div>
+        <div class="work-item">
+            <h5>Industrial Automation Technician</h5>
+            <p>Atlântico Sul Heavy Industry Solutions · <span>Aug 2012 - Jul 2014</span></p>
+        </div>
+    </div>
+
+    <hr>
+
+
+    <div class="container">
+        <h2>Skills</h2>
+        <!--
+        <div class="skills1"></div>
+        <div class="skills2"></div>
+        -->
+        <div class="skills-container1">
+            <p>JavaScript</p>
+            <p>TypeScript</p>
+            <p>NodeJS</p>
+            <p>Git</p>
+            <p>Flutter</p>
+        </div>
+        <div class="skills-level1">
+            <p>★★★★</p>
+            <p>★★★</p>
+            <p>★★★</p>
+            <p>★★★★</p>
+            <p>★★★</p>
+        </div>
+
+        <div class="skills-container2">
+            <p>SharePoint</p>
+            <p>Azure</p>
+            <p>Power Platform</p>
+            <p>React</p>
+            <p>Microsoft365</p>
+        </div>
+        <div class="skills-level2">
+            <p>★★★★★</p>
+            <p>★★★</p>
+            <p>★★★</p>
+            <p>★★★</p>
+            <p>★★★★</p>
+        </div>
+
+        <div class="skills-container3">
+            <p>API</p>
+            <p>Express</p>
+            <p>MongoDB</p>
+            <p>Angular</p>
+            <p>.NET</p>
+        </div>
+        <div class="skills-level3">
+            <p>★★★</p>
+            <p>★★★</p>
+            <p>★★★</p>
+            <p>★★★</p>
+            <p>★★★</p>
+        </div>
+    </div>
+
+    <hr>
+    <div class="container">
+        <h2 style="margin-bottom: 20px;">Licenses & Certifications</h2>
+
+        <h6>MTA: Software Development Fundamentals - Certified 2021 - Microsoft</h6>
+        <h6>Microsoft Certified: Power Platform Fundamentals - Microsoft</h6>
+        <h6>MTA: Introduction to Programming Using HTML and CSS - Certified 2021 -
+            Microsoft</h6>
+        <h6>Microsoft Certified: Azure Fundamentals - Microsoft</h6>
+        <h6>MTA: Introduction to Programming Using JavaScript - Certified 2021 - Microsoft
+        </h6>
+        <h6>Foundations of User Experience (UX) Design - Coursera</h6>
+        <h6>Fundamentals of Graphic Design - Coursera</h6>
+        <h6>Gamification - Coursera</h6>
+    </div>
+
+    <hr style="margin-top: 20px;">
+    <p style="text-align: center;">© 2022 André Souza.</p>
 </body>
 
 </html>
